Fixing JUnit conflicts